--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>essa é uma pg de teste para aprender a utilizar
        meu primeiro repositório Git ligado com o GITHUB
     </p>
+    <p>uma nova alteração entrou aqui</p>
 </body>
 </html>
