alterações para incluir header e footer

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>   
     <h1>aprendendo git</h1>
+    </header>
+
     <p>essa é uma pg de teste para aprender a utilizar
        meu primeiro repositório Git ligado com o GITHUB
     </p>
+
     <p>uma nova alteração entrou aqui</p>
+
+    <footer>
+    desenvolvido por pafuncio
+    </footer>
+    
 </body>
 </html>
