--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        meu primeiro repositório Git ligado com o GITHUB
     </p>
 
-    <p>uma nova alteração entrou aqui</p>
+    <p>uma nova alteração entrou aqui, e continua alterando</p>
 
     <footer>
     desenvolvido por pafuncio
