alterações de h1 do header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>   
-    <h1>aprendendo git</h1>
+    <h1>aprendendo git no SENAI</h1>
     </header>
 
     <p>essa é uma pg de teste para aprender a utilizar
@@ -19,6 +19,6 @@
     <footer>
     desenvolvido por pafuncio
     </footer>
-    
+
 </body>
 </html>
