--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>   
-    <h1>aprendendo git no SENAI</h1>
+    <h1>aprendendo git no SENAI Jaú</h1>
     </header>
 
     <p>essa é uma pg de teste para aprender a utilizar
@@ -17,7 +17,7 @@
     <p>uma nova alteração entrou aqui, e continua alterando</p>
 
     <footer>
-    desenvolvido por pafuncio
+    desenvolvido por pafuncio Silva
     </footer>
 
 </body>
